# mono

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.githooks/: pre-commit
docs/: features.md  (+3 more)
src/apps/ezfilter/e2e/: Cargo.toml  README.md
src/apps/ezfilter/e2e/src/: lib.rs
src/apps/ezfilter/e2e/tests/: happy_paths.rs
src/apps/ezvote/: Cargo.toml  IMPLEMENTATION_PLAN.md  PROMPT.md  PROTOCOL.md  SCRATCH.md  SPEC.md
src/apps/ezvote/crates/core/: Cargo.toml
src/apps/ezvote/crates/core/src/: action.rs  engine.rs  error.rs  executor.rs  genesis.rs  hash.rs  lib.rs  state.rs
src/apps/ezvote/crates/core/tests/: conformance.rs
src/apps/ezvote/tests/: CONFORMANCE.md
src/apps/ezvote/wit/: world.wit
src/apps/mitmproxy-rs/: Cargo.toml  README.md  askama.toml  build.sh  config.toml  run_e2e_tests.sh
src/apps/mitmproxy-rs/certs/: ca.crt  ca.key
src/apps/mitmproxy-rs/plugins/examples/html-analyzer/: Cargo.toml
src/apps/mitmproxy-rs/plugins/examples/json-validator/: Cargo.toml
src/apps/mitmproxy-rs/plugins/examples/logger/: Cargo.toml
src/apps/mitmproxy-rs/plugins/examples/minimal-wasi-plugin/: Cargo.toml
src/apps/mitmproxy-rs/plugins/sdk/: Cargo.toml
src/apps/mitmproxy-rs/plugins/sdk/src/: lib.rs
src/apps/mitmproxy-rs/plugins/sdk/wit/: world.wit
src/apps/mitmproxy-rs/src/: config.rs  lib.rs  main.rs
src/apps/mitmproxy-rs/src/cert/: ca.rs  generator.rs  mod.rs
src/apps/mitmproxy-rs/src/content/: handlers.rs  mod.rs
src/apps/mitmproxy-rs/src/db/: mod.rs
src/apps/mitmproxy-rs/src/db/migrations/: 001_create_plugins.down.sql  001_create_plugins.up.sql
src/apps/mitmproxy-rs/src/plugins/: capability.rs  mod.rs  registry.rs
src/apps/mitmproxy-rs/src/proxy/: forwarder.rs  http.rs  listener.rs  message.rs  mod.rs  protocol.rs  tests.rs  tls.rs  utils.rs
src/apps/mitmproxy-rs/src/proxy/handlers/: http1.rs  http2.rs  http3.rs  mod.rs
src/apps/mitmproxy-rs/src/test_utils/: mod.rs
src/apps/mitmproxy-rs/src/wasm/: bindings.rs  host_functions.rs  mod.rs  plugin_manager.rs  protocol_adapter.rs  runtime.rs
src/apps/mitmproxy-rs/src/web/: cert_distribution.rs  device_detection.rs  mod.rs  server.rs  templates.rs  tests.rs
src/apps/mitmproxy-rs/tests/: README.md  e2e_test.rs  integration_test.rs  minimal_wasi_plugin.wasm  multi_protocol_tests.rs  sample_service.rs  wasi_integration_test.rs
src/apps/mitmproxy-rs/web-ui/static/: dashboard.js
src/apps/mitmproxy-rs/web-ui/templates/: base.html  dashboard.html
src/apps/mitmproxy-rs/wit/: world.wit
src/apps/wasm-test-component/: Cargo.toml  Makefile
src/apps/wasm-test-component/src/: lib.rs
src/apps/wasm-test-component/wit/: world.wit
src/apps/wasmtime-wasi-proxy-test-rs/: Cargo.toml  README.md
src/apps/wasmtime-wasi-proxy-test-rs/examples/echo-handler/: Cargo.toml  README.md  build.rs  echo-handler.wit
src/apps/wasmtime-wasi-proxy-test-rs/examples/echo-handler/src/: lib.rs
src/apps/wasmtime-wasi-proxy-test-rs/examples/json-api-handler/: Cargo.toml  build.rs  json-api-handler.wit
src/apps/wasmtime-wasi-proxy-test-rs/examples/simple-handler/: Cargo.toml
src/apps/wasmtime-wasi-proxy-test-rs/src/: main.rs
src/apps/witmproxy/: Cargo.toml  Dockerfile  README.md  build.rs  scratch.md
src/apps/witmproxy/e2e/: Cargo.toml  README.md
src/apps/witmproxy/e2e/src/: lib.rs
src/apps/witmproxy/e2e/tests/: browsers.rs  proxy_and_plugins.rs  tenants_and_dynamic.rs
src/apps/witmproxy/scripts/: docker-entrypoint.sh  docker-publish.sh  extract-openapi.sh
src/apps/witmproxy/src/: config.rs  lib.rs  main.rs  telemetry.rs  tenant.rs  tests.rs
src/apps/witmproxy/src/acl/: mod.rs  tests.rs
src/apps/witmproxy/src/cert/: ca.rs  generator.rs  mod.rs
src/apps/witmproxy/src/cli/: api_client.rs  auth.rs  daemon.rs  group.rs  mod.rs  plugin.rs  proxy.rs  service.rs  tailscale.rs  tenant.rs  tenant_cmd.rs  tests.rs  trust.rs  update.rs
src/apps/witmproxy/src/content/: mod.rs  parser.rs
src/apps/witmproxy/src/db/: mod.rs  tenant_tests.rs  tenants.rs
src/apps/witmproxy/src/events/: connect.rs  content.rs  mod.rs  request.rs  response.rs  timer.rs
src/apps/witmproxy/src/http/: utils.rs
src/apps/witmproxy/src/plugins/: capabilities.rs  capability.rs  cel.rs  mod.rs  registry.rs  tenant_tests.rs
src/apps/witmproxy/src/proxy/: mod.rs  netfilter.rs  tenant_resolver.rs  tests.rs  transparent.rs  utils.rs
src/apps/witmproxy/src/test_utils/: mod.rs
src/apps/witmproxy/src/wasm/: bindgen.rs  mod.rs  runtime.rs
src/apps/witmproxy/src/web/: acl_middleware.rs  auth.rs  auth_endpoints.rs  auth_tests.rs  cert_distribution.rs  device_detection.rs  management.rs  mod.rs  server.rs  templates.rs  tests.rs
src/apps/witmproxy/web-ui/static/: style.css
src/apps/witmproxy/web-ui/templates/: base.html  index.html  instructions.html
src/apps/witmproxy/wit/: world.wit
src/rust/cicd/: Cargo.toml
src/rust/cicd/src/: cli.rs  context.rs  env.rs  error.rs  main.rs  shell.rs
src/rust/cicd/src/commands/: build.rs  bump.rs  check.rs  gh_release.rs  list.rs  mod.rs  publish.rs  release.rs  tag.rs  test.rs
src/rust/cicd/src/project/: mod.rs  registry.rs  rust.rs  wasm.rs
src/rust/cicd/src/types/: mod.rs  project_id.rs  target.rs  version.rs
src/rust/ezfeature-rs/: .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/rust/ezfeature-rs/migrations/: 001_initial_schema.sql
src/rust/ezfeature-rs/src/: audio.rs  database.rs  error.rs  lib.rs  main.rs  text.rs  types.rs  video.rs  website.rs  youtube.rs
src/rust/wasm-test-component/: Cargo.toml  Makefile
src/rust/wasm-test-component/src/: lib.rs
src/rust/witmproxy-plugin-noop/: Cargo.toml  Makefile  README.md
src/rust/witmproxy-plugin-noop/src/: lib.rs
src/rust/witmproxy-plugin-noop/wit/: world.wit
src/rust/witmproxy-plugin-noshorts/: Cargo.toml  Makefile  README.md
src/rust/witmproxy-plugin-noshorts/src/: injection.rs  lib.rs
src/rust/witmproxy-plugin-noshorts/tests/: integration_tests.rs
src/rust/witmproxy-plugin-noshorts/wit/: world.wit
(+331 files in other folders)
