[workspace]
resolver = "2"
members = [
    "src/apps/witmproxy",
    "src/apps/eznote/src-tauri", 
    "src/rust/wasm-test-component",
    "src/rust/witmproxy-plugin-noop",
]
exclude = [
    "src/apps/wasmtime", 
    "src/apps/cargo-generate",
]

# Workspace-wide configuration
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
