[workspace]
resolver = "2"
members = [
    "src/apps/witmproxy",
    "src/apps/ezfilter-client/src-tauri",
    "src/apps/eznote/src-tauri", 
    "src/rust/wasm-test-component",
    "src/rust/witmproxy-plugin-noop",
    "src/rust/witmproxy-plugin-noshorts",
]
exclude = [
    "src/apps/wasmtime", 
]

# Workspace-wide configuration
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
