[workspace]
resolver = "2"
members = [
    "src/apps/witmproxy",
    "src/apps/witmproxy/e2e",
    "src/apps/ezfilter-client/src-tauri",
    "src/apps/eznote/src-tauri",
    "src/rust/wasm-test-component",
    "src/rust/witmproxy-plugin-noop",
    "src/rust/witmproxy-plugin-noshorts",
    "src/rust/cicd",
]
exclude = []

# Workspace-wide configuration
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
incremental = true

# Optimize dependencies even in dev mode — reduces link time and improves
# runtime performance during development with minimal impact on compile time
# (deps are cached after the first build).
[profile.dev.package."*"]
opt-level = 2
debug = false
