[package]
name = "mitmproxy-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based MITM proxy with WASM plugin system"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP/HTTPS
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rustls-native-certs = "0.8.1"
tokio-rustls = "0.26"

# Certificate generation
rcgen = "0.13.2"
ring = "0.17"
x509-parser = "0.17"
time = { version = "0.3", features = ["macros"] }

# DNS resolution (using tokio's built-in resolver)
# hickory-dns = "0.24"  # Commented out for now

# WASM runtime
wasmtime = { version = "34.0.1", features = ["async"] }
wasmtime-wasi = "34.0.1"

# Web server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# HTTP client for plugins
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
anyhow = "1.0"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
hex = "0.4"
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

# Template engine
askama = "0.12"
askama_axum = "0.4"

# Configuration
clap = { version = "4.0", features = ["derive"] }

[workspace]
members = [
    "plugins/sdk",
    "plugins/examples/logger",
]

[[bin]]
name = "mitm-proxy"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
