[package]
name = "witmproxy"
version = "0.0.6"
edition = "2024"
authors = ["Theodore Brockman <iam@theo.lol>"]
description = "A WASM-in-the-middle proxy"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ezcorg/mono"
keywords = ["wasm", "mitm", "proxy"]
categories = ["network-programming", "wasm", "web-programming"]

[lib]
name = "witmproxy"
path = "src/lib.rs"

[[bin]]
name = "witm"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec", "compat"] }

# HTTP/HTTPS
hyper = { version = "1.7.0", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1.16", features = ["server", "client", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27.0", features = ["http1", "http2"] }
http-body-util = "0.1"

# TLS
rustls = { version = "0.23.36", features = ["ring"] }
rustls-pemfile = "2.0"
rustls-native-certs = "0.8.0"
tokio-rustls = "0.26"

# Certificate generation
rcgen = { version = "0.14.7", features = ["x509-parser"] }
ring = "0.17"
x509-parser = "0.18.1"
time = { version = "0.3", features = ["macros"] }

# WASM runtime (component-model + async)
wasmtime = { features = ["component-model-async"], version = "43.0.0" }
wasmtime-wasi = { features = ["p3"], version = "43.0.0" }
wasmtime-wasi-http = { features = ["p3"], version = "43.0.0" }
wit-bindgen = { version = "0.54.0", features = ["default"] }
# WASM signature verification
wasmsign2 = "0.2.6"

# Web server
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }

# HTTP client for plugins
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream", "http2", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Auth
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
argon2 = "0.5"

# Utilities
anyhow = "1.0"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
hex = "0.4"
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

# Template engine
askama = { version = "0.15.5", features = ["derive"] }
# cargo-generate is huge (libgit2, libssh2, openssl) — only needed for `witm plugin new`
cargo-generate = { version = "0.23.7", features = ["vendored-openssl"], optional = true }

clap = { version = "4.5.47", features = ["derive"] }
semver = "1"
confique = { version = "0.4.0", features = ["toml"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
# Must match version in sqlx
libsqlite3-sys = { version = "0.30.1", features = [
    "bundled-sqlcipher-vendored-openssl"
] }
dirs = "6.0.0"
salvo = { version = "0.89.3", features = ["oapi", "quinn", "serve-static", "cors", "affix-state", "rustls", "force-https"] }
rust-embed = "8.7.2"
http-body = "1.0.1"
cel-cxx = { version = "0.2.4", features = ["tokio"] }
cron = "0.16.0"
async-compression = { version = "0.4.35", features = ["brotli", "deflate", "deflate64", "futures-io", "gzip", "tokio", "zstd"] }
tokio-stream = "0.1.17"
notify = { version = "8.2.0" }
qrcode = "0.14"

# Binary patching for delta updates
bipatch = "1.0.0"

# Optional test helper dependencies
tempfile = { version = "3.8", optional = true }
service-manager = "0.11.0"

[dev-dependencies]
# Test dependencies
tokio-test = "0.4"
tempfile = "3.8"

[features]
# Feature to expose test utilities for integration tests in other crates
test-helpers = ["dep:tempfile"]
# Include cargo-generate for `witm plugin new` (large dependency tree)
plugin-new = ["dep:cargo-generate"]
