[package]
name = "mono-cicd"
version = "0.0.1"
edition = "2024"
publish = false

[[bin]]
name = "mono"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
xshell = "0.2"
semver = "1"
toml_edit = "0.23.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
