[package]
name = "ezfeature-rs"
version = "0.1.0"
edition = "2021"
description = "Feature extraction pipeline for text, websites, audio, video, and YouTube content"
license = "MIT"

[[bin]]
name = "ezfeature-rs"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database dependencies
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
pgvector = "0.4"

# Web scraping and HTML processing
reqwest = { version = "0.12", features = ["json", "stream"] }
scraper = "0.23.1"
headless_chrome = "1.0"

# Audio/Video processing
# Note: Using external FFmpeg commands instead of Rust bindings for easier build
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"

# Text processing and NLP
tokenizers = "0.21.2"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"

# YouTube API
youtube_dl = "0.10.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
mime = "0.3"
base64 = "0.22"
sha2 = "0.10"
regex = "1.10"
futures = "0.3"
async-trait = "0.1"
tempfile = "3.8"

# Vector embeddings
ort = "1.16.3"

# Web server dependencies
warp = "0.3"
bytes = "1.5"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.13"
