[package]
name = "witmproxy-plugin-noshorts"
version = "0.1.0"
edition = "2024"
authors = ["Theodore Brockman"]
description = "Blocks YouTube and Instagram shorts"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.46.0"
flate2 = "1.0"
brotli = "8.0.2"
anyhow = "1.0.100"

[dev-dependencies]
witmproxy = { path = "../../apps/witmproxy", features = ["test-helpers"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.component]
package = "witmproxy:witmproxy-plugin-noshorts-plugin"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
