[package]
name = "ezfilter-e2e"
version = "0.1.0"
edition = "2024"
description = "End-to-end tests for ezfilter using Appium + tauri-driver against a real witmproxy backend"
license = "AGPL-3.0-only"
publish = false

[lib]
name = "ezfilter_e2e"
path = "src/lib.rs"

[dependencies]
witmproxy-test = { path = "../../witmproxy/e2e" }
witmproxy = { path = "../../witmproxy", features = ["test-helpers"] }
tokio = { version = "1.47", features = ["full"] }
fantoccini = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
which = "8.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
tokio-test = "0.4"
