[package]
name = "ezvote-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and state machine for the ezvote protocol"

[dependencies]
blake3.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
