[package]
name = "mitm_plugin_sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for developing WASM plugins for MITM Proxy"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
paste = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4"
